# typst-polylux-to-pptx

./: README.md  pyproject.toml
img_to_pptx/: main.py
